fix(Preview): document preview wrapped when title is too long

--- a/projects/vanilla-search/src/app/preview/preview.component.scss
+++ b/projects/vanilla-search/src/app/preview/preview.component.scss
@@ -1,3 +1,17 @@
 .overflow-y-scroll {
     overflow-y: auto;
 }
+
+.spinner-grow {
+    width: 3rem;
+    height: 3rem;
+}
+
+.preview-bg {
+    background-color: #efefef;
+}
+
+:host-context(.dark)
+.preview-bg {
+  background-color: black;
+}
